<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ua.aleksandr.firsttask.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/white_text"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:background="@drawable/back_orange"
                android:paddingBottom="@dimen/vertical_padding2"
                android:paddingLeft="@dimen/horizontal_padding"
                android:paddingRight="@dimen/horizontal_padding"
                android:paddingTop="@dimen/vertical_padding2"
                android:text="@string/status" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/vertical_padding"
                android:paddingTop="@dimen/vertical_padding">

                <TextView
                    style="@style/gray_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_date" />

                <TextView
                    android:id="@+id/text_view_create_date"
                    style="@style/black_right_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="23лютого" />
            </RelativeLayout>

            <View style="@style/Divider" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/vertical_padding"
                android:paddingTop="@dimen/vertical_padding">

                <TextView
                    style="@style/gray_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_date" />

                <TextView
                    android:id="@+id/text_view_registration_date"
                    style="@style/black_right_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6березня" />
            </RelativeLayout>

            <View style="@style/Divider" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/vertical_padding"
                android:paddingTop="@dimen/vertical_padding">

                <TextView
                    style="@style/gray_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/done_for_date" />

                <TextView
                    android:id="@+id/text_view_done_for_data"
                    style="@style/black_right_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5січня" />
            </RelativeLayout>

            <View style="@style/Divider" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/vertical_padding"
                android:paddingTop="@dimen/vertical_padding">

                <TextView
                    style="@style/gray_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/responsible" />

                <TextView
                    android:id="@+id/text_view_responsibility_date"
                    style="@style/black_right_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/responsible_name" />
            </RelativeLayout>

            <View style="@style/Divider" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/vertical_padding"
                android:paddingTop="@dimen/vertical_padding">

                <TextView
                    android:id="@+id/text_view_description_data"
                    style="@style/black_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="300dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/my_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </RelativeLayout>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>
